Changes to the grid to fix display on tablets Add args to courses template part to distinguish between homepage and course page listings

--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -16,6 +16,13 @@
         grid-template-columns: repeat(3, minmax($card-minimum-size, 1fr));
     }
 
+    &.highlight-courses {
+        @media screen and (min-width: $breakpoint-medium) and (max-width: $breakpoint-large) {
+            grid-template-columns: repeat(2, minmax($card-minimum-size, 1fr)) !important;
+            gap: 1.5rem;
+        }
+    }
+
     .entity {
         gap: 2rem;
         grid-template-columns: repeat(2, minmax($card-minimum-size, 1fr));
