--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -30,7 +30,7 @@ $right-space: 50px;
 /* Cards */
 $card-border-radius: 10px;
 $card-height: 160px;
-$card-minimum-size: 200px;
+$card-minimum-size: 210px;
 $entity-radius: 5px;
 $card-content-pad: 0 15px 10px;
 $action-btn-color: #074ce1;
